[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/gameovercre1_16.tres" type="DynamicFont" id=1]
[ext_resource path="res://font/gameplay_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://font/gameovercre1.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://tiles/background.png" type="Texture" id=4]
[ext_resource path="res://Options/Regles.gd" type="Script" id=5]
[ext_resource path="res://FadeIn.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0.258824, 1 )
font_data = ExtResource( 3 )

[node name="Regles" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 28.0
margin_top = 32.0
margin_right = 996.0
margin_bottom = 568.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_left = 412.0
margin_right = 556.0
margin_bottom = 38.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Regles"

[node name="regles" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 968.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 1 )
text = "Votre mission, si vous l'acceptez, est de fuir ce labyrinthe rempli de pieges!
Vous et vos partenaires avez des roles bien specifiques:
- Acrobate: capable d'eviter des pieges
- Healer: apprendra surement un jour a soigner quelqu'un
- Homme-chat: a peu de points de vie mais peut ressuciter
- Robot: un peu d'eau lui serait fatal mais est friant d'electricite
- Tank: un bon gaillard qui n'a peur de rien, il possede plus de points de vie
- Cordonnier: il adore les chaussures et en a  toujours plusieurs sur lui

Faites attentions aux pieges! Certains peuvent etre fatals! 
Mais rassurez-vous, grace a vos fideles chaussures, vous avez la capacite
d'activer ces pieges!
Attention tout de meme, le Robot et le Tank ne possedent pas de chaussures
au debut de la partie! Alors que le Cordonnier demarre avec 4 chaussures!

Trouvez la sortie de chaque etage! Celle-ci est reperable par sa texture
verte :)"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_left = 409.0
margin_top = 514.0
margin_right = 559.0
margin_bottom = 536.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Back"

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="fade_out_finished" from="FadeIn" to="." method="_on_FadeIn_fade_out_finished"]
